# stableAPI

./: LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md
stableAPI/: __init__.py
stableAPI/static/: style.css
stableAPI/templates/: hello.html
